[package]
name = "cloud_chamber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.1"
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }
winit = "0.25.0"
device_query = "0.2.7"


